[workspace]
members = [
  "cw-orch",
  "cw-orch-daemon",
  "cw-orch-interchain",
  "packages/cw-orch-core",
  "packages/cw-orch-mock",
  "packages/cw-orch-networks",
  # "packages/clone-testing",
  # "packages/cw-orch-osmosis-test-tube",
  "packages/cw-orch-neutron-test-tube",
  "packages/cw-orch-traits",
  "test_contracts/*",
  "packages/macros/*",
  "packages/interchain/*",
]
exclude = ["test_contracts/compatibility-test"]
resolver = "2"

[workspace.package]
authors = ["CyberHoward <cyberhoward@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/AbstractSDK/cw-orchestrator"

[workspace.dependencies]
cw-utils = { version = "2.0.0" }
cosmwasm-std = { version = "2.1" }
cw-storage-plus = { version = "2.0.0" }
cosmos-sdk-proto = { version = "0.22.0", default-features = false } # https://github.com/cosmos/cosmos-rust/issues/497

cw-multi-test = { package = "abstract-cw-multi-test", version = "2.0.2", features = [
  "cosmwasm_1_2",
] }
cw20 = { package = "abstract-cw20", version = "3.0.0" }
cw20-base = { package = "abstract-cw20-base", version = "3.0.0" }

osmosis-test-tube = { version = "25.0.0" }
neutron-test-tube = { version = "4.2.0" }

anyhow = "1.0"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
tokio = { version = "1.39", features = ["full"] }

cw-orch = { path = "./cw-orch", version = "0.25.0" }
cw-orch-daemon = { path = "./cw-orch-daemon", version = "0.25.0" }
cw-orch-core = { path = "packages/cw-orch-core", version = "2.0.0" }
cw-orch-traits = { path = "packages/cw-orch-traits", version = "0.24.0" }
cw-orch-mock = { path = "packages/cw-orch-mock", version = "0.24.0" }
cw-orch-networks = { path = "packages/cw-orch-networks", version = "0.24.0" }

# Macros
cw-orch-contract-derive = { path = "packages/macros/cw-orch-contract-derive", version = "0.21.0" }
cw-orch-fns-derive = { path = "packages/macros/cw-orch-fns-derive", version = "0.22.0" }

# Extensions
# cw-orch-osmosis-test-tube = { version = "0.3.0", path = "packages/cw-orch-osmosis-test-tube" }

# Interchain
cw-orch-interchain = { path = "cw-orch-interchain", version = "0.4.0" }
cw-orch-interchain-core = { path = "packages/interchain/interchain-core", version = "0.5.0" }
cw-orch-interchain-daemon = { path = "packages/interchain/interchain-daemon", version = "0.5.0" }
cw-orch-interchain-mock = { path = "packages/interchain/interchain-mock", version = "0.5.0" }
cw-orch-starship = { path = "packages/interchain/starship", version = "0.5.0" }
cw-orch-proto = { path = "packages/interchain/proto", version = "0.5.0" }

#Clone Testing
# cw-orch-clone-testing = { version = "0.6.1", path = "packages/clone-testing" }

thiserror = { version = "1.0.63" }
sha2 = { version = "0.10.8" }
serde_json = "1.0.125"
tonic = { version = "0.11.0" }
prost-types = "0.12.3"
prost = "0.12.3"                   # prost, tonic, cosmrs bump locked by osmosis (we use it for tokenfactory
cosmrs = { version = "0.17.0" }
# Test deps
speculoos = "0.11.0"

# Logging
log = "0.4.22"

# Interchain
ibc-relayer-types = { version = "0.29.2" }
ibc-chain-registry = { version = "0.29.2" }
