[workspace]
exclude = [
  "test_contracts/compatibility-test", # TODO: add new after cw-orch-core 2.0.0 as it's breaking, it shouldn't be compatible
]
members = [
  "cw-orch",
  "cw-orch-daemon",
  "cw-orch-interchain",
  "packages/cw-orch-core",
  "packages/cw-orch-mock",
  "packages/cw-orch-networks",
  "packages/clone-testing",
  "packages/cw-orch-osmosis-test-tube",
  "packages/cw-orch-neutron-test-tube",
  "packages/cw-orch-traits",
  "test_contracts/*",
  "packages/macros/*",
  "packages/interchain/*",
  "packages/integrations/*",
]
resolver = "2"

[workspace.package]
authors    = ["CyberHoward <cyberhoward@protonmail.com>"]
edition    = "2021"
license    = "LGPL-3.0"
repository = "https://github.com/AbstractSDK/cw-orchestrator"

[workspace.dependencies]
cosmos-sdk-proto = { version = "0.24.0", default-features = false }
cosmwasm-std     = { version = "2.1" }
cw-storage-plus  = { version = "2.0.0" }
cw-utils         = { version = "2.0.0" }

# cw-multi-test = { package = "abstract-cw-multi-test", version = "2.0.2", features = ["cosmwasm_1_2"] }
cw-multi-test = { package = "abstract-cw-multi-test", git = "https://github.com/abstractsdk/cw-multi-test-fork", branch = "token-factory-integration", version = "2.0.2", features = ["cosmwasm_1_2", "tokenfactory"] }
cw20          = { version = "2.0.0" }
cw20-base     = { version = "2.0.0" }

neutron-test-tube = { version = "=5.0.1" }
osmosis-test-tube = { version = "27.0.0" }

anyhow = "1.0"
serde  = { version = "1.0.208", default-features = false, features = ["derive"] }
tokio  = { version = "1.39", features = ["full"] }

cw-orch          = { path = "./cw-orch", version = "0.27.0" }
cw-orch-core     = { path = "packages/cw-orch-core", version = "2.1.4" }
cw-orch-daemon   = { path = "./cw-orch-daemon", version = "0.29.0" }
cw-orch-mock     = { path = "packages/cw-orch-mock", version = "0.24.2" }
cw-orch-networks = { path = "packages/cw-orch-networks", version = "0.24.3" }
cw-orch-traits   = { path = "packages/cw-orch-traits", version = "0.25.0" }

# Macros
cw-orch-contract-derive = { path = "packages/macros/cw-orch-contract-derive", version = "0.21.0" }
cw-orch-fns-derive      = { path = "packages/macros/cw-orch-fns-derive", version = "0.23.0" }

# Extensions
cw-orch-neutron-test-tube = { version = "0.1.0", path = "packages/cw-orch-neutron-test-tube" }
cw-orch-osmosis-test-tube = { version = "0.4.0", path = "packages/cw-orch-osmosis-test-tube" }

#Clone Testing
cw-orch-clone-testing = { version = "0.8.0", path = "packages/clone-testing" }

# Interchain
cw-orch-interchain        = { path = "cw-orch-interchain", version = "0.8.0" }
cw-orch-interchain-core   = { path = "packages/interchain/interchain-core", version = "0.9.0" }
cw-orch-interchain-daemon = { path = "packages/interchain/interchain-daemon", version = "0.9.0" }
cw-orch-interchain-mock   = { path = "packages/interchain/interchain-mock", version = "0.9.0" }
cw-orch-proto             = { path = "packages/interchain/proto", version = "0.9.0" }
cw-orch-starship          = { path = "packages/interchain/starship", version = "0.7.0" }


cosmrs      = { version = "0.19.0" }
ibc-proto   = { version = "0.47.0" }
prost       = "0.13.1"
prost-types = "0.13.1"
serde_json  = "1.0.125"
sha2        = { version = "0.10.8" }
thiserror   = { version = "1.0.63" }
tonic       = { version = "0.12.1" }
# Test deps
speculoos = "0.11.0"

# Logging
log = "0.4.22"

# Interchain
ibc-chain-registry = { version = "0.29.2" }
ibc-relayer-types  = { version = "0.29.2" }
