[package]
name = "boot-core"
version = { workspace = true}
authors = { workspace = true}
edition = { workspace = true}
license = { workspace = true}
repository = { workspace = true}
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
keywords = ["cosmwasm", "blockchain"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

exclude = [
    ".env",
]

[[example]]
name = "cw20"

[dependencies]
boot-contract-derive = {workspace = true}
boot-fns-derive = {workspace = true}
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true}
ibc-chain-registry = "0.1.0"
rayon = "1.6.0"
thiserror = { version = "1.0.21" }
tokio = { version = "1.4", features = ["full"] }
tonic = "0.8.1"
secp256k1 = { version = "0.20.3", default-features = false }
log="0.4.14"
serde_json = "1.0.79"
reqwest = { version = "0.11.9"}
base64 = "0.13.0"
dotenv="0.15.0"
prost = "0.11"
hkd32= { version="0.5.0", features=["bip39","mnemonic","bech32"] }
bitcoin="0.27.1"
rust-crypto = "^0.2"
rand_core = { version = "0.5", default-features = false }
ed25519-dalek = { version = "1", features = ["serde"] }
hex="0.4.3"
env_logger = "0.10.0"
erased-serde = "0.3"
eyre = "0.6"
lazy_static="1.4"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"
regex="1"
cosmrs = {version = "0.11.0", features=["dev","cosmwasm","grpc"]}
chrono= "0.4"
schemars = "0.8.10"
base16 = "0.2.1"
sha256 = "1.1.1"
derive_builder = "0.12.0"

[dev-dependencies]
boot-cw-plus = {path = "../boot-cw-plus"}
