[package]
name = "boot-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
keywords = ["cosmwasm", "blockchain"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

exclude = [".env"]


[[example]]
name = "cw20"
required-features = ["daemon"]

[features]
# enable the optional dependencies
daemon = [
    "dep:ibc-chain-registry",
    "dep:tokio",
    "dep:tonic",
    "dep:secp256k1",
    "dep:reqwest",
    "dep:base64",
    "dep:hkd32",
    "dep:rand_core",
    "dep:ed25519-dalek",
    "dep:cosmrs",
    "dep:derive_builder",
    "dep:eyre",
    "dep:chrono",
    "dep:base16",
    "dep:rust-crypto",
    "dep:hex",
    "dep:bitcoin",
    "dep:prost",
    "dep:sha256",
]

[dependencies]
# Default deps
boot-contract-derive = { workspace = true }
boot-fns-derive = { workspace = true }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true}
schemars = "0.8.10"
# erased-serde = "0.3"
log="0.4.14"
serde_json = "1.0.79"
thiserror = { version = "1.0.21" }


# Daemon deps
sha256 = { version = "1.1.1", optional = true }
prost = {version = "0.11", optional = true }
bitcoin = {version = "0.29.2", optional = true }
hex = {version = "0.4.3", optional = true }
rust-crypto = {version = "0.2", optional = true }
ibc-chain-registry = { version = "0.2.0", optional = true }
tokio = { version = "1.4", features = ["full"], optional = true }
tonic = { version = "0.8.1", optional = true, features = ["tls", "tls-roots"] }
secp256k1 = { version = "0.24.2", default-features = false, optional = true }
reqwest = { version = "0.11.9", optional = true }
base64 = { version = "0.21.0", optional = true }
hkd32 = { version = "0.7.0", features = [
    "bip39",
    "mnemonic",
    "bech32",
], optional = true }
rand_core = { version = "0.6.4", default-features = false, optional = true }
ed25519-dalek = { version = "1", features = ["serde"], optional = true }
eyre = { version = "0.6", optional = true }
# Waiting for a 0.12 release
cosmrs = { version = "0.9.0", features = [
    "dev",
    "cosmwasm",
    "grpc",
], optional = true }
chrono = { version = "0.4", optional = true }
base16 = { version = "0.2.1", optional = true }
derive_builder = { version = "0.12.0", optional = true }

[dev-dependencies]
boot-cw-plus = { path = "../boot-cw-plus" }
dotenv = {version = "0.15.0"}
env_logger = {version = "0.10.0"}
