[package]
name = "boot-core"
version = "0.10.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
keywords = ["cosmwasm", "blockchain"]
categories = ["development-tools", "api-bindings"]
readme = "../README.md"

exclude = [".env"]

[features]
default = ["daemon"]

# enable the optional dependencies
daemon = [
  "dep:ibc-chain-registry",
  "dep:ibc-relayer-types",
  "dep:tokio",
  "dep:tonic",
  "dep:secp256k1",
  "dep:reqwest",
  "dep:base64",
  "dep:hkd32",
  "dep:rand_core",
  "dep:ed25519-dalek",
  "dep:cosmrs",
  "dep:derive_builder",
  "dep:eyre",
  "dep:chrono",
  "dep:base16",
  "dep:ripemd",
  "dep:ring",
  "dep:hex",
  "dep:bitcoin",
  "dep:prost",
  "dep:sha256",
]

[dependencies]
# Default deps
boot-contract-derive = { version = "0.10.0" }
boot-fns-derive = { version = "0.10.0" }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
schemars = "0.8.10"
log = "0.4.14"
serde_json = "1.0.79"
thiserror = { version = "1.0.21" }

# Daemon deps
sha256 = { version = "1.1.1", optional = true }
prost = { version = "0.11", optional = true }
bitcoin = { version = "0.30.0", optional = true }
hex = { version = "0.4.3", optional = true }
ripemd = { version = "0.1.3", optional = true }
ibc-chain-registry = { version = "0.23.0", optional = true }
ibc-relayer-types = { version = "0.23.0", optional = true }
tokio = { version = "1.4", features = ["full"], optional = true }
tonic = { version = "0.8.1", optional = true, features = ["tls", "tls-roots"] }
secp256k1 = { version = "0.27.0", default-features = false, optional = true }
reqwest = { version = "0.11.9", optional = true }
base64 = { version = "0.21.0", optional = true }
hkd32 = { version = "0.7.0", features = [
  "bip39",
  "mnemonic",
  "bech32",
], optional = true }
rand_core = { version = "0.6.4", default-features = false, optional = true }
ed25519-dalek = { version = "1", features = ["serde"], optional = true }
eyre = { version = "0.6", optional = true }
cosmrs = { version = "0.12.0", features = [
  "dev",
  "cosmwasm",
  "grpc",
], optional = true }
chrono = { version = "0.4", optional = true }
base16 = { version = "0.2.1", optional = true }
derive_builder = { version = "0.12.0", optional = true }
ring = { version = "0.16.20", optional = true }

[dev-dependencies]
boot-core = { features = ["daemon"], path = "." }
uid = "0.1.7"
boot-contract-derive = { version = "0.10.0" }
env_logger = "0.10.0"
cw20 = { git = "https://github.com/Abstract-OS/cw-plus.git" }
cw20-base = { git = "https://github.com/Abstract-OS/cw-plus.git" }
speculoos = "0.11.0"
ctor = "0.2.0"
duct = "0.13"
