[package]
name = "boot-cw-plus"
version = { workspace = true}
authors = { workspace = true}
edition = { workspace = true}
license = { workspace = true}
repository = { workspace = true}
description = "Environment generic CosmWasm-plus scripting interfaces"
keywords = ["cosmwasm", "blockchain"]
readme = "README.md"

exclude = [
    ".env",
]

[dependencies]

boot-core ={workspace = true}
cosmwasm-std = { workspace = true }
serde =  { workspace = true }
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20 = "1.0.1"
cw20-base = "0.15.0"
cw1-whitelist = "0.15.1"

[dev-dependencies]
tokio = "1.19.1"
dotenv="0.15.0"
env_logger = "0.10.0"
log="0.4.14"
