[package]
name        = "boot-cw-plus"
version     = "0.10.2"
authors     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Environment generic CosmWasm-plus scripting interfaces"
keywords    = ["cosmwasm", "blockchain"]
readme      = "README.md"

exclude = [".env"]

[[bin]]
name              = "release_wasms"
path              = "fetch/download_wasms.rs"
required-features = ["wasms"]

# Mock example does not require any features
[[example]]
name = "cw-plus-mock"

# Using the daemon requires the daemon feature
[[example]]
name              = "cw-plus-daemon"
required-features = ["daemon"]


[features]
wasms   = ["dep:tokio", "dep:reqwest"]
daemon  = ["boot-core/daemon", "dep:tokio"]

[dependencies]
boot-core     = { version = "0.10.0" }
cosmwasm-std  = { workspace = true }
serde         = { workspace = true }
anyhow        = { workspace = true }
cw-multi-test = { workspace = true }
# packages 
cw1  = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw3  = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw4  = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw20 = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
# crates
cw1-subkeys        = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw1-whitelist      = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw20-base          = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw20-ics20         = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw3-fixed-multisig = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw3-flex-multisig  = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw4-group          = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }
cw4-stake          = { git = "https://github.com/AbstractSDK/cw-plus.git", tag = "v0.10.0" }

# For bin
tokio   = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
dotenv     = "0.15.0"
env_logger = "0.10.0"
log        = "0.4.14"
serde      = "1.0"
serde_json = "1.0"
