[package]
name = "boot-msg"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true }
boot-msg-derive = { path = "../packages/boot-msg-derive", version = "0.10.0" }
boot-msg-fns-derive = { path = "../packages/boot-msg-fns-derive", version = "0.10.0" }
serde                = { workspace = true }
serde_json = "1.0.79"
