[package]
name = "boot-plus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Environment generic CosmWasm-plus scripting interfaces"
keywords = ["cosmwasm", "blockchain"]
readme = "README.md"

exclude = [
    ".env",
]

[dependencies]
boot-core ={path ="../boot-core"}
cosmwasm-std = { version = "1.1" }
cw20 = "0.15.0"
cw20-base = "0.15.0"
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
serde = "1.0"
cw1-whitelist = "0.15.1"

[patch.crates-io]
boot-core ={path ="../boot-core"}

[dev-dependencies]
tokio = "1.19.1"
dotenv="0.15.0"
env_logger = "0.9.0"
log="0.4.14"
