[workspace]

members = ["contracts/*"]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
cosmwasm-std = "1.0.0"
cw20 = { package = "abstract-cw20", version = "1.2.2" }
cw20-base = { package = "abstract-cw20-base", version = "1.2.2" }

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
anyhow = "1.0"
log = "0.4.14"

cw-orch = { version = "0.24.0" }
cw-orch-interchain = { version = "0.3.1" }
cw-orch-clone-testing = { version = "0.6.4" }
cw-orch-osmosis-test-tube = { version = "0.3.0" }

[patch.crates-io]
cw-orch = { path = "../cw-orch" }
cw-orch-interchain = { path = "../cw-orch-interchain" }
cw-orch-clone-testing = { path = "../packages/clone-testing" }
cw-orch-osmosis-test-tube = { path = "../packages/cw-orch-osmosis-test-tube" }
