[workspace]

members = ["contracts/*"]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
cosmwasm-std = "2.0.0"
cw20 = { version = "2.0.0" }
cw20-base = { version = "2.0.0" }
cw-storage-plus = { version = "2.0.0" }

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
anyhow = "1.0"
log = "0.4.14"

cw-orch = { version = "0.25.0" }
cw-orch-interchain = { version = "0.4.0" }

[patch.crates-io]
cw-orch = { path = "../cw-orch" }
cw-orch-interchain = { path = "../cw-orch-interchain" }
