[package]
name = "cosm-script"
version = "0.1.0"
authors = ["CyberHoward <cyberhoward@protonmail.com>"]
edition = "2021"
description = "Stripting library for deploying and interacting with CosmWasm smart-contracts"
license = "Apache-2.0"
repository = "https://github.com/CyberHoward/cosm-rust-script"
keywords = ["cosmwasm", "blockchain"]
categories = ["development-tools", "api-bindings", "accessibility"]
readme = "README.md"

exclude = [
    ".env",
]

[dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
tokio = { version = "1.4", features = ["full"] }
tonic = "0.7.2"
secp256k1 = { version = "0.20.3", default-features = false }
log="0.4.14"
anyhow="1.0"
serde_json = "1.0.79"
reqwest = { version = "0.11.9"}
base64 = "0.13.0"
dotenv="0.15.0"
prost = "0.10"
async-trait = "0.1.53"
hkd32= { version="0.5.0", features=["bip39","mnemonic","bech32"] }
bitcoin="0.27.1"
rust-crypto = "^0.2"
rand_core = { version = "0.5", default-features = false }
ed25519-dalek = { version = "1", features = ["serde"] }
hex="0.4.3"
env_logger = "0.8.3"
erased-serde = "0.3"
eyre = "0.6"
lazy_static="1.4"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"
regex="1"
cosmrs = {version = "0.7.0", features=["dev","cosmwasm"]}
cosmos-sdk-proto = {version = "0.12.2", features=["cosmwasm","grpc-transport"]}
chrono= "0.4"
