[package]
name = "cw-orch-cli"
version = "0.3.0-beta.1"
authors = ["Buckram <misha@abstract.money>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for managing Cosmos-based interaction."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw-orch = { workspace = true, features = ["daemon"] }

# Logs
pretty_env_logger = { version = "0.5.0" }
async-trait = { version = "0.1" }

# Cosmos
cosmwasm-std = { workspace = true }
cw-utils = "2.0.0"
cw20 = { version = "2.0" }
cw-ownable = { version = "2.0.0" }
cw3 = { version = "2.0.0" }
cosmrs = { workspace = true, features = ["cosmwasm", "grpc"] }
ibc-chain-registry = { workspace = true }

# Serde
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { version = "0.22.1" }

# Interactive clap
interactive-clap = "0.3.0"
interactive-clap-derive = "0.3.0"
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = { version = "0.6" }
strum = { version = "0.24", features = ["derive"] }
derive_more = "0.99"
shell-words = "1.0.0"
inquire = { version = "0.6", features = ["editor"] }

# Key management
keyring = "2.0.5"
bip32 = { version = "0.5", features = ["mnemonic"] }
rand_core = { version = "0.6", features = ["std"] }
