[package]
name = "cw-orch-daemon"
version = "0.22.0-rc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
keywords = ["cosmwasm", "blockchain"]
categories = ["development-tools"]
readme = "../README.md"

exclude = [".env"]

[package.metadata.docs.rs]
# passes all-features to cargo when building the docs.
all-features = true

[features]
default = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = []
eth = ["dep:ethers-signers", "dep:ethers-core"]
[dependencies]
# Default deps
cw-orch-core = { workspace = true }
cw-orch-traits = { workspace = true }
cw-orch-networks = { workspace = true }

cosmwasm-std = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
schemars = "0.8.10"
log = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

prost-types = { workspace = true }
# Daemon deps
sha2 = { workspace = true }
prost = { version = "0.12.3" }
bitcoin = { version = "0.30.0" }
hex = { version = "0.4.3" }
ripemd = { version = "0.1.3" }
tokio = { version = "1.4", features = ["full"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
reqwest = { version = "0.11.9" }
base64 = { version = "0.21.0" }
hkd32 = { version = "0.7.0", features = ["bip39", "mnemonic", "bech32"] }
rand_core = { version = "0.6.4", default-features = false }
ed25519-dalek = { version = "2", features = ["serde"] }
eyre = { version = "0.6" }
cosmrs = { version = "0.15.0", features = ["dev", "cosmwasm", "grpc"] }
chrono = { version = "0.4" }
base16 = { version = "0.2.1" }
ring = { version = "0.17.3" }
dirs = "5.0.1"


# Injective dependencies
ethers-signers = { version = "2.0.7", optional = true }
ethers-core = { version = "2.0.7", optional = true }
async-recursion = "1.0.5"

# Gzip
flate2 = { version = "1.0.26" }
lazy_static = "1.4.0"

[dev-dependencies]
cw-orch-daemon = { path = "." }
uid = "0.1.7"
env_logger = "0.11.2"
cw20 = { version = "1" }
cw20-base = { version = "1" }
cosmwasm-schema = "1.2"
speculoos = "0.11.0"
ctor = "0.2.0"
duct = "0.13"
mock-contract = { path = "../contracts/mock_contract", features = [
  "interface",
] }
serial_test = "3.0.0"

# Ethereum deps
ethers-signers = { version = "2.0.7" }
ethers-core = { version = "2.0.7" }
tokio-test = "0.4.3"
