[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
edition     = { workspace = true }
keywords    = ["cosmwasm", "blockchain"]
license     = { workspace = true }
name        = "cw-orch-daemon"
readme      = "../README.md"
repository  = { workspace = true }
version     = "0.29.2"

exclude = [".env"]

[package.metadata.docs.rs]
# passes all-features to cargo when building the docs.
all-features = true

[features]
default = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
eth        = ["dep:ethers-signers", "dep:ethers-core"]
node-tests = []
[dependencies]
# Default deps
cw-orch-core     = { workspace = true }
cw-orch-networks = { workspace = true }
cw-orch-traits   = { workspace = true }

anyhow       = { workspace = true }
cosmwasm-std = { workspace = true }
log          = { workspace = true }
schemars     = "0.8.21"
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }

prost-types = { workspace = true }
# Daemon deps
base16        = { version = "0.2.1" }
base64        = { version = "0.22.1" }
bech32        = { version = "0.11.0", default-features = false, features = ["alloc"] }
bip39         = { version = "2.0.0", features = ["rand"] }
bitcoin       = { version = "0.32.2" }
chrono        = { version = "0.4" }
cosmrs        = { workspace = true, features = ["dev", "cosmwasm", "grpc"] }
dirs          = "5.0.1"
ed25519-dalek = { version = "2", features = ["serde"] }
eyre          = { version = "0.6" }
hex           = { version = "0.4.3" }
prost         = { workspace = true }
rand_core     = { version = "0.6.4", default-features = false }
reqwest       = { version = "0.12.5" }
ring          = { version = "0.17.8" }
ripemd        = { version = "0.1.3" }
sha2          = { workspace = true }
tokio         = { workspace = true, features = ["full"] }
tonic         = { workspace = true, features = ["tls-native-roots"] }

# Injective dependencies
async-recursion = "1.1.1"
ethers-core     = { version = "2.0.14", optional = true }
ethers-signers  = { version = "2.0.14", optional = true }

# Gzip
flate2      = { version = "1.0.31" }
lazy_static = "1.5.0"

# Lock daemon
file-lock = { version = "2.1.11" }
once_cell = { version = "1.19.0" }

# Tempfile names
uid = "0.1.7"

# Deserialize network config
http       = "1.1.0"
libc-print = "0.1.23"
toml       = "0.8"

[dev-dependencies]
cosmwasm-schema = "2.1"
ctor            = "0.2.8"
cw-orch         = { path = "../cw-orch", features = ["daemon"] }
cw-orch-daemon  = { path = "." }
cw20            = { version = "2" }
cw20-base       = { version = "2" }
duct            = "0.13"
env_logger      = "0.11.5"
mock-contract   = { path = "../contracts-ws/contracts/mock_contract", features = ["interface"] }
serial_test     = { version = "3.1.1" }
speculoos       = "0.11.0"

# Ethereum deps
ethers-core    = { version = "2.0.14" }
ethers-signers = { version = "2.0.14" }
tokio-test     = "0.4.4"

# File lock test
counter-contract  = { path = "../contracts-ws/contracts/counter" }
dotenv            = "0.15.0"
nix               = { version = "0.29.0", features = ["process"] }
pretty_env_logger = "0.5.0"
